fix:link to quiz page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <h1>StartNG Quiz App</h1>
-      <a class="btn" href="./quiz.html">Start Quiz</a>
+      <a class="btn" href="quiz.html" title="quiz">Start Quiz</a>
     </div>
   </body>
 </html>
