--- a/quiz.html
+++ b/quiz.html
@@ -11,7 +11,7 @@
       <div id="quiz">
         <div id="notification">
           <div id="counter">
-            <a id="home" href="/index.html">Home</a>
+            <a id="home" href="index.html" title="home">Home</a>
           </div>
           <div id="counter">
             <p>
